ingress-nginx/07-mirror/webshell.yaml
apiVersion: v1
kind: Service
metadata:
  name: webshell
  namespace: demo-echo
spec:
#  type: ClusterIP
  type: NodePort
  ports:
  - name: echo
    port: 80
    targetPort: 8080
    protocol: TCP
  - name: ssh
    port: 22
    targetPort: 22
    protocol: TCP
  selector:
    app: webshell
---
apiVersion: apps/v1beta1  #1.8 v1beta1
kind: Deployment
metadata:
  name: webshell
  namespace: demo-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webshell
  template:
    metadata:
      labels:
        name: webshell
        app: webshell
    spec:
      containers:
      - name: webshell
        image: lijiaocn/webshell:2.2.1
        resources:
          limits:
            cpu: 1
            memory: 64Mi
          requests:
            cpu: 0.1
            memory: 32Mi
        imagePullPolicy: IfNotPresent
        securityContext:
          privileged: false
          runAsNonRoot: false
        stdin: false
        stdinOnce: false
        tty: false
      restartPolicy: Always
      dnsPolicy: Default
      serviceAccountName: default
      hostNetwork: false
      hostPID: false
      hostIPC: false
